Fix(Pagination): Remove oversized top-padding and add missing elements (TS-3267)
Search results were displaying excessive whitespace between the layout flow and the paginator component, fix that.
Add the missing results text to under pagination
Fix Pagination elements text not being bolded

--- a/apps/cyberstorm-remix/app/commonComponents/PackageSearch/PackageSearch.css
+++ b/apps/cyberstorm-remix/app/commonComponents/PackageSearch/PackageSearch.css
@@ -46,11 +46,18 @@
 
   .package-search__pagination {
     display: flex;
-    gap: var(--gap-2xs);
+    flex-direction: column;
+    gap: var(--gap-xl);
     align-items: center;
     align-self: stretch;
     justify-content: center;
-    padding-top: var(--space-40);
+    padding: var(--space-48) 0;
+
+    color: var(--color-text-tertiary);
+
+    font-size: var(--font-size-body-md);
+    font-weight: var(--font-weight-regular);
+    line-height: var(--line-height-md);
 
     > .skeleton {
       width: 100%;
